@@ -1,3 +1,5 @@
+H now toggles hide, for pause and resume
+
 Smarten up message dialogs.
 
 Tidy up build warnings.
